@@ -11,9 +11,9 @@ Description: fix build.xml to remove nbproject usage as we don't have it.
    <target name="init" depends="-setup"/>
    <target name="compile-test-single" depends="compile-tests"/>
    <target name="compile-single" depends="compile"/>
-@@ -616,7 +615,6 @@
+@@ -620,7 +619,6 @@
        <zipfileset src="${dist}/src.zip"/>
-       <zipfileset dir="lib" includes="junit.jar" prefix="lib"/>
+       <zipfileset dir="lib" includes="junit.jar,clover.jar" prefix="lib"/>
        <zipfileset dir="." includes=".classpath,.project"/>
 -      <zipfileset dir="nbproject" includes="**/*" prefix="nbproject"/>
        <zipfileset dir="${native}" includes="libffi,libffi/**/*" prefix="native"/>
